force-app/main/default/objects/MailMatchingDetail__c.object
<CustomObject>
    <fields>
        <fullName>EndText1__c</fullName>
        <label>終了テキスト1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldApi__c</fullName>
        <label>フィールドAPI名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManualMatching__c</fullName>
        <label>正規表現マッチング</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingMaster__c</fullName>
        <label>メール取込設定</label>
        <referenceTo>MailMatchingSetting__c</referenceTo>
        <relationshipName>MailMatchingDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartText1__c</fullName>
        <label>開始テキスト1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartText2__c</fullName>
        <label>開始テキスト2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mail2Xマッチング設定</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SettingMaster__c</columns>
        <columns>FieldApi__c</columns>
        <columns>StartText1__c</columns>
        <columns>StartText2__c</columns>
        <columns>EndText1__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Mail2Xマッチング設定名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MultiLineRule</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>ダミー</errorMessage>
    </validationRules>
</CustomObject>